[package]
name = "xmltree"
version = "0.10.0"
authors = ["Andrew Chin <achin@eminence32.net>"]
description = "Parse an XML file into a simple tree-like structure"
documentation = "https://docs.rs/xmltree/"
repository = "https://github.com/eminence/xmltree-rs"
keywords = ["xml", "parse", "xmltree"]
license = "MIT"
readme = "README.md"
categories = ["parsing", "data-structures"]


[dependencies]
xml-rs = "0.8"

